<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">TrendyArt</string>
    <string name="error_msg">No Internet connection.  \nPlease try again.</string>
    <string name="artist_name">Artist</string>
    <string name="favorites">Favorites</string>
    <string name="empty_msg">No favorite items found. \nAdd your favorite artworks!</string>
    <string name="delete_all">Delete All</string>
    <string name="favorites_title">Favorites</string>
    <string name="appwidget_text">No favorite artworks saved. \nFind yours by clicking on: </string>
    <string name="thumbnail_widget_description">Image of the saved artwork.</string>
    <string name="current_artwork_description">Image of the current artwork.</string>
    <string name="refresh_button_description">Refresh button for trying to fetch data from network.</string>
    <string name="detail_image_description">Detail image of the selected artwork.</string>
    <string name="location_label">Location</string>
    <string name="dimensions_label">Dimensions</string>
    <string name="medium_label">Medium</string>
    <string name="category_label">Category</string>
    <string name="detail_image_artist_description">Detail image of the clicked Artist.</string>
    <string name="hometown_label">Hometown</string>
    <string name="nationality_label">Nationality</string>
    <string name="image_thumbnail_description">Artwork image thumbnail from favorites.</string>
    <string name="fab_contentDecription">Button for saving the item into Favorites.</string>
    <string name="refresh">Refresh</string>
    <string name="snackbar_no_network_connection">No Network connection. Please try again.</string>
    <string name="snackbar_no_data_for_artist">Sorry, No data for this artwork.</string>
    <string name="snackbar_deleted_item">This item was deleted!</string>
    <string name="snackbar_item_added">Item added to favorites</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="not_applicable">N/A</string>
    <string name="snackbar_no_data_artist">Sorry, No data for this artist.</string>
    <string name="snackbar_item_removed">Item removed from the favorites</string>
    <string name="delete_all_message">Are you sure you want to delete all artworks?</string>
    <string name="delete_all_title">Delete All</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="analytics_artwork_screenname">Artworks-Gridview</string>
    <string name="network_ok">All good with your Network connection!</string>
    <string name="no_network">No Network connection!</string>

    <!-- Menu items -->
    <string name="search">Search</string>
    <string name="search_hint">Search artist or genre</string>
    <string name="action_article">Article</string>
    <string name="action_artist">Artist</string>
    <string name="action_artwork">Artwork</string>
    <string name="loading_results_message">Loading results...</string>
    <string name="no_data_found">No data found</string>
    <string name="title_artworks">Artworks</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="information_label">Information</string>
    <string name="museum_label">Museum</string>
    <string name="menu_share">Share</string>
    <string name="artist_label">Artist</string>
    <string name="similar_artworks_label">Similar Artworks</string>
    <string name="Content_Description">Content Description</string>
    <string name="action_gene">Gene</string>
    <string name="action_show">Show</string>
    <string name="action_none">All</string>
    <string name="image">Image</string>

</resources>
