<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        android:iconTint="?attr/iconTintColor"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:checkableBehavior="single"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_filter_list_black_24dp">

        <item
            android:id="@+id/action_type_article"
            android:orderInCategory="1"
            android:title="@string/action_article"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_type_artist"
            android:orderInCategory="2"
            android:title="@string/action_artist"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_type_artwork"
            android:orderInCategory="3"
            android:title="@string/action_artwork"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_type_gene"
            android:orderInCategory="4"
            android:title="@string/action_gene"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_type_show"
            android:orderInCategory="5"
            android:title="@string/action_show"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_type_none"
            android:orderInCategory="6"
            android:title="@string/action_none"
            app:showAsAction="never" />

    </group>
</menu>