<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fav_detail_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.FavDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fav_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/fav_detail_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/blurry_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_height"
                    android:src="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/fav_detail_artwork_image"
                    android:layout_width="@dimen/artwork_detail_square"
                    android:layout_height="@dimen/artwork_detail_square"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/square_image_margin"
                    android:layout_marginTop="@dimen/square_image_margin"
                    android:contentDescription="@string/detail_image_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_height"
                    android:background="@drawable/photo_background_protection"
                    android:fitsSystemWindows="true" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/fav_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:background="@null"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/PopupMenuStyle" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="@dimen/overlap_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/fav_detail_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                app:cardBackgroundColor="@color/cardBackground">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/background_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fav_detail_artist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/padding_6dp"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorText"
                            app:fontFamily="sans-serif"
                            tools:text="Artist" />

                        <TextView
                            android:id="@+id/fav_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/padding_6dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/colorText"
                            app:fontFamily="sans-serif-condensed"
                            tools:text="Artwork Title" />

                        <TextView
                            android:id="@+id/fav_detail_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_8dp"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/padding_6dp"
                            android:textColor="@color/colorAccent"
                            tools:text="1599-1600" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fav_detail_medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:textColor="@color/colorText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/fav_detail_category"
                        app:layout_constraintTop_toBottomOf="@+id/fav_detail_category"
                        tools:text="Artwork Medium" />

                    <TextView
                        android:id="@+id/fav_detail_category"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8dp"
                        android:layout_marginLeft="@dimen/margin_32dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:layout_marginStart="@dimen/margin_32dp"
                        android:textColor="@color/colorText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/category_label"
                        app:layout_constraintTop_toTopOf="@+id/category_label"
                        tools:text="Painting" />


                    <TextView
                        android:id="@+id/fav_detail_museum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/last_margin_bottom"
                        android:layout_marginEnd="@dimen/margin_8dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/fav_artwork_dimens_cm"
                        app:layout_constraintTop_toBottomOf="@+id/fav_artwork_dimens_cm"
                        tools:text="Artwork place of exhibiting" />

                    <TextView
                        android:id="@+id/fav_artwork_dimens_cm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:textColor="@color/colorText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/fav_artwork_dimens_in"
                        app:layout_constraintTop_toBottomOf="@+id/fav_artwork_dimens_in"
                        tools:text="80 × 55.6 cm" />

                    <TextView
                        android:id="@+id/fav_artwork_dimens_in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_8dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:textColor="@color/colorText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/fav_detail_medium"
                        app:layout_constraintTop_toBottomOf="@+id/fav_detail_medium"
                        tools:text="31 1/2 × 21 7/8 in" />

                    <TextView
                        android:id="@+id/category_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:text="@string/category_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/colorText"
                        app:fontFamily="sans-serif-condensed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/background_title_layout" />

                    <TextView
                        android:id="@+id/medium_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/medium_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorText"
                        app:fontFamily="sans-serif-condensed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/fav_detail_medium" />

                    <TextView
                        android:id="@+id/dimens_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:text="@string/dimensions_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorText"
                        app:fontFamily="sans-serif-condensed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/fav_artwork_dimens_in" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:text="@string/location_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorText"
                        app:fontFamily="sans-serif-condensed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/fav_detail_museum" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>